// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default dropdown closed (snapshot) 1`] = `
<div
  className="dropdown borders"
  style={
    Object {
      "width": "undefinedpx",
    }
  }
>
  <ul
    className="dropdown-field"
    onBlur={[Function]}
    onClick={[Function]}
    tabIndex={0}
  >
    <li
      className="dropdown-field-label"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="dropdown-field-label-group"
      >
        <span
          className="dropdown-field-label-group-text"
        >
          testtype
        </span>
      </div>
      <span
        className="material-icons dropdown-arrow"
        color=""
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        arrow_drop_down
      </span>
    </li>
  </ul>
</div>
`;

exports[`Default dropdown open (snapshot) 1`] = `
<div
  className="dropdown borders dropdown--is-open"
  style={
    Object {
      "width": "undefinedpx",
    }
  }
>
  <ul
    className="dropdown-field"
    onBlur={[Function]}
    onClick={[Function]}
    tabIndex={0}
  >
    <li
      className="dropdown-field-label"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="dropdown-field-label-group"
      >
        <span
          className="dropdown-field-label-group-text"
        >
          testtype
        </span>
      </div>
      <span
        className="material-icons dropdown-arrow"
        color=""
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        arrow_drop_down
      </span>
    </li>
  </ul>
  <ul
    className="dropdown-elements"
    style={
      Object {
        "maxHeight": 30000,
      }
    }
  >
    <li
      className="dropdown-field-label"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="dropdown-field-label-group"
      >
        <span
          className="dropdown-field-label-group-text"
        >
          element 1
        </span>
      </div>
    </li>
    <li
      className="dropdown-field-label"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="dropdown-field-label-group"
      >
        <span
          className="dropdown-field-label-group-text"
        >
          element 2
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`dropdown with avatars and horizontal rules (snapshot) 1`] = `
<div
  className="dropdown borders dropdown--is-open"
  style={
    Object {
      "width": "undefinedpx",
    }
  }
>
  <ul
    className="dropdown-field"
    onBlur={[Function]}
    onClick={[Function]}
    tabIndex={0}
  >
    <li
      className="dropdown-field-label contains-avatar"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="dropdown-field-label-group"
      >
        <img
          className="avatar"
          size={30}
          src="http://path.to/image1.jpg"
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": "50%",
              "color": "#ffffff",
              "display": "inline-flex",
              "fontSize": 15,
              "height": 30,
              "justifyContent": "center",
              "muiPrepared": true,
              "userSelect": "none",
              "width": 30,
            }
          }
        />
        <span
          className="dropdown-field-label-group-text"
        >
          account 1
        </span>
      </div>
      <span
        className="material-icons dropdown-arrow"
        color=""
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        arrow_drop_down
      </span>
    </li>
  </ul>
  <ul
    className="dropdown-elements"
    style={
      Object {
        "maxHeight": 30000,
      }
    }
  >
    <li
      className="dropdown-field-label contains-avatar"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="dropdown-field-label-group"
      >
        <img
          className="avatar"
          size={30}
          src="http://path.to/image1.jpg"
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": "50%",
              "color": "#ffffff",
              "display": "inline-flex",
              "fontSize": 15,
              "height": 30,
              "justifyContent": "center",
              "muiPrepared": true,
              "userSelect": "none",
              "width": 30,
            }
          }
        />
        <span
          className="dropdown-field-label-group-text"
        >
          account 1
        </span>
      </div>
    </li>
    <hr />
    <li
      className="dropdown-field-label contains-avatar"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="dropdown-field-label-group"
      >
        <img
          className="avatar"
          size={30}
          src="http://path.to/image2.jpg"
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": "50%",
              "color": "#ffffff",
              "display": "inline-flex",
              "fontSize": 15,
              "height": 30,
              "justifyContent": "center",
              "muiPrepared": true,
              "userSelect": "none",
              "width": 30,
            }
          }
        />
        <span
          className="dropdown-field-label-group-text"
        >
          account 2
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`dropdown with selected elemnent (snapshot) 1`] = `
<div
  className="dropdown borders"
  style={
    Object {
      "width": "undefinedpx",
    }
  }
>
  <ul
    className="dropdown-field"
    onBlur={[Function]}
    onClick={[Function]}
    tabIndex={0}
  >
    <li
      className="dropdown-field-label"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="dropdown-field-label-group"
      >
        <span
          className="dropdown-field-label-group-text"
        >
          element 2
        </span>
      </div>
      <span
        className="material-icons dropdown-arrow"
        color=""
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        arrow_drop_down
      </span>
    </li>
  </ul>
</div>
`;

exports[`dropup (snapshot) 1`] = `
<div
  className="dropdown borders"
  style={
    Object {
      "width": "undefinedpx",
    }
  }
>
  <ul
    className="dropdown-field"
    onBlur={[Function]}
    onClick={[Function]}
    tabIndex={0}
  >
    <li
      className="dropdown-field-label"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="dropdown-field-label-group"
      >
        <span
          className="dropdown-field-label-group-text"
        >
          testtype
        </span>
      </div>
      <span
        className="material-icons dropdown-arrow"
        color=""
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        arrow_drop_down
      </span>
    </li>
  </ul>
</div>
`;
